Свёрстана шапка, добавлены стили sass

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,8 +1,19 @@
+@import 'var'
+@import 'mixins'
+@import 'interface'
+@import 'normalize'
 @import 'fonts'
+
+@import 'header'
 
 body
   font-family: 'Museo Sans Light', sans-serif
-  background-color: grey
+  color: $text-color
 
-p
-  font-size: 28px
+.container
+  width: 1170px
+  margin: 0 auto
+
+
+
+
