--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,13 @@
   outline: none;
 }
 
+.input {
+  font-size: 15px;
+  padding: 25px;
+  border-radius: 10px;
+  border: 1px solid #dddddd;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -383,6 +390,14 @@ template {
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Museo Sans Black';
+  src: url("../fonts/MuseoSansCyrl/MuseoSansCyrl-900.eot");
+  src: url("../fonts/MuseoSansCyrl/MuseoSansCyrl-900.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSansCyrl/MuseoSansCyrl-900.woff") format("woff"), url("../fonts/MuseoSansCyrl/MuseoSansCyrl-900.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .header-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -424,15 +439,201 @@ template {
   -moz-tab-size: 20px;
     -o-tab-size: 20px;
        tab-size: 20px;
+  font-size: 20px;
+  font-weight: 700;
 }
 
-body {
-  font-family: 'Museo Sans Light', sans-serif;
-  color: #333333;
+.main {
+  background-color: #f5f5f5;
+  padding: 60px 0;
+}
+
+.main-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main-text {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.main-text__title {
+  font-size: 41px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  margin-bottom: 50px;
+}
+
+.main-text__title span {
+  font-size: 20px;
+  display: block;
+  margin-top: 44px;
+}
+
+.main-image {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.main-advantages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 350px;
+  margin-top: 66px;
+}
+
+.main-advantages__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 26px;
+}
+
+.main-advantages__text {
+  line-height: 24px;
+  font-size: 14px;
+}
+
+.main-advantages__img {
+  min-width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid #ffd200;
+  margin-right: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.main-advantages__img-1 {
+  background-image: url("../img/main/clock.png");
+}
+
+.main-advantages__img-2 {
+  background-image: url("../img/main/calculator.png");
+}
+
+.main-advantages__img-3 {
+  background-image: url("../img/main/paint-board.png");
+}
+
+.feedback {
+  padding: 94px 0;
+  background: url("../img/feedback/feedback-bg.jpg") no-repeat center right -26%;
+}
+
+.form {
+  max-width: 575px;
+}
+
+.form__title {
+  font-size: 24px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  line-height: 35px;
+  margin-bottom: 45px;
+}
+
+.form__subtitle {
+  display: block;
+  margin-bottom: 50px;
+  font-weight: lighter;
+}
+
+.form__input {
+  width: 270px;
+  margin-bottom: 30px;
+  outline: none;
+}
+
+.form__input:first-child {
+  margin-right: 30px;
+}
+
+.form__button {
+  padding: 28px;
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  margin-bottom: 30px;
+}
+
+.form__manager {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 15px;
+}
+
+.form__manager-image {
+  margin: 0 22px 0 78px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.form__manager-recall_left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  line-height: 24px;
+  width: 230px;
+}
+
+.form__manager-recall_right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: left;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 200px;
+  height: 35px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form__manager-recall_right_text {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form__manager-recall_right_phone {
+  display: block;
+  font-family: 'Museo Sans Black', sans-serif;
+  font-size: 15px;
+}
+
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .container {
   width: 1170px;
   margin: 0 auto;
+  font-family: 'Museo Sans Light', sans-serif;
+  color: #333333;
+  font-weight: 800;
+}
+
+img {
+  max-width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
