--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,16 +3,25 @@
 @import 'interface'
 @import 'normalize'
 @import 'fonts'
-
 @import 'header'
+@import 'main'
+@import 'feedback'
+
+*, *:after, *:before
+  box-sizing: border-box
 
 body
-  font-family: 'Museo Sans Light', sans-serif
-  color: $text-color
+  
 
 .container
   width: 1170px
   margin: 0 auto
+  font-family: 'Museo Sans Light', sans-serif
+  color: $text-color
+  font-weight: 800
+
+img
+  max-width: 100%
 
 
 
