--- a/css/style.css
+++ b/css/style.css
@@ -528,6 +528,20 @@ template {
 .feedback {
   padding: 94px 0;
   background: url("../img/feedback/feedback-bg.jpg") no-repeat center right -26%;
+  background-size: contain;
+  position: relative;
+  z-index: 1;
+}
+
+.feedback:before {
+  content: '';
+  left: 0;
+  top: 0;
+  width: 60%;
+  height: 100%;
+  background-color: #fff;
+  position: absolute;
+  z-index: -1;
 }
 
 .form {
